# localization_system

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf
src/: main.c
src/device_management/: CMakeLists.txt  device_config.c  device_management.c  gatt_service.c
src/device_management/include/: device_config.h  device_management.h  gatt_service.h  gatt_uuids.h
src/dw1000_driver/: CMakeLists.txt  deca_device.c  deca_mutex.c  deca_params_init.c  deca_range_tables.c  deca_sleep.c  deca_spi.c  port.c
src/dw1000_driver/examples/: ex_01a_main.c  ex_02a_main.c  ex_05a_main.c  ex_05b_main.c
src/dw1000_driver/include/: port.h
src/localization/: CMakeLists.txt  radio_handler.c
src/localization/include/: radio_handler.h
